--- a/t2mi_packer_project.qsf
+++ b/t2mi_packer_project.qsf
@@ -120,5 +120,9 @@ set_location_assignment PIN_B6 -to RDY_OUT
 set_location_assignment PIN_D5 -to SC_D_OUT
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RDY_OUT
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SC_D_OUT
+set_global_assignment -name TEXT_FILE pat.txt
+set_global_assignment -name TEXT_FILE pmt.txt
+set_global_assignment -name TEXT_FILE sdt.txt
+set_global_assignment -name VERILOG_FILE insert_tables.v
 set_global_assignment -name SLD_FILE "C:/Users/TeddyJack/g420_new_t2mi_packer_altera/output_files/stp1_auto_stripped.stp"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
