--- a/t2mi_packer_project.qsf
+++ b/t2mi_packer_project.qsf
@@ -124,6 +124,7 @@ set_global_assignment -name TEXT_FILE pat.txt
 set_global_assignment -name TEXT_FILE pmt.txt
 set_global_assignment -name TEXT_FILE sdt.txt
 set_global_assignment -name VERILOG_FILE insert_tables.v
-set_global_assignment -name SLD_FILE "C:/Users/TeddyJack/g420_new_t2mi_packer_altera/output_files/stp1_auto_stripped.stp"
 set_global_assignment -name CDF_FILE t2mi_packer_project.cdf
+set_global_assignment -name CDF_FILE output_files/t2mi_packer_project.cdf
+set_global_assignment -name SLD_FILE "C:/Users/TeddyJack/g420_new_t2mi_packer_altera/output_files/stp1_auto_stripped.stp"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
